--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -23,5 +23,7 @@
   "deleteConfirm": "Вы уверены, что хотите удалить эту задачу? Это действие нельзя отменить.",
   "noTasks": "Пока нет задач",
   "dragHere": "Перетащите задачу сюда",
-  "language": "Язык"
+  "language": "Язык",
+  "errorTitle": "Заголовок обязательно",
+  "errorDesc": "Описание обязательно"
 }
