--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -23,5 +23,7 @@
   "deleteConfirm": "Are you sure you want to delete this task? This action cannot be undone.",
   "noTasks": "No tasks yet",
   "dragHere": "Drag task here",
-  "language": "Language"
+  "language": "Language",
+  "errorTitle": "Title is required",
+  "errorDesc": "Description is required"
 }
